--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+private/
+
+.cache/
+dist/
+
+.tern-port
+
+# elm-package generated files
+elm-stuff
+# elm-repl generated files
+repl-temp-*
+
 # Logs
 logs
 *.log
