--- a/projects/filament/package.json
+++ b/projects/filament/package.json
@@ -13,6 +13,9 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "eslint": "^5.10.0",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-ramda": "^2.5.1",
     "rollup": "^0.67.4",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0"
